samples/_failures_safe/1761088726_22b4e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68907fff.c: In function ‘main’:
./samples/SAFE/__tmp_68907fff.c:137:22: error: expected ‘;’ at end of input
  137 |                 break
      |                      ^
      |                      ;
./samples/SAFE/__tmp_68907fff.c:137:17: error: expected declaration or statement at end of input
  137 |                 break
      |                 ^~~~~
./samples/SAFE/__tmp_68907fff.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68907fff.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68907fff.c:137:17: error: expected declaration or statement at end of input
